Code gen cleanup.
